# drift_detectors_pack

./: ARCHITECTURE.md  CITATION.cff  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml
benchmarks/: README.md  __init__.py  indpensim.py  run_indpensim.py  runner.py  soft_sensor.py  soft_sensors.py
drift_detectors/: .gitignore  drift_detector.py
drift_detectors/model_based/disagreement_metrics/: base.py  metadata.yaml  mse.py  pearson.py  spearman.py
drift_detectors/model_based/model_disagreement/: detector.py  metadata.yaml  usage.md
drift_detectors/multivariate/kdq_tree/: detector.py  usage.md
drift_detectors/multivariate/mmd/: detector.py  usage.md
drift_detectors/multivariate/pca_cd/: metadata.yaml
drift_detectors/univariate/adwin/: detector.py  metadata.yaml
drift_detectors/univariate/eddm/: usage.md
drift_detectors/univariate/hddm_a/: detector.py  metadata.yaml  usage.md
drift_detectors/univariate/ks/: metadata.yaml  usage.md
results/: README.md  expA_drift_inputs.json  expB_model_disagreement.json  indpensim_univariate_CO2_percent_in_off_gas.csv  indpensim_univariate_substrate_concentration.csv  soft_sensor_experiment.json  univariate_summary.json
results/legacy/: indpensim_multivariate.csv  indpensim_univariate_dissolved_oxygen_concentration.csv  indpensim_univariate_pH.csv  indpensim_univariate_penicillin_concentration.csv  multivariate_summary.json
src/drift_detectors/: __init__.py  drift_detector.py
src/drift_detectors/model_based/disagreement_metrics/: __init__.py  base.py  mse.py  pearson.py  spearman.py
src/drift_detectors/model_based/model_disagreement/: detector.py
src/drift_detectors/multivariate/kdq_tree/: detector.py  metadata.yaml
src/drift_detectors/multivariate/mmd/: detector.py  metadata.yaml
src/drift_detectors/multivariate/pca_cd/: detector.py  usage.md
src/drift_detectors/univariate/adwin/: detector.py  usage.md
src/drift_detectors/univariate/eddm/: detector.py  metadata.yaml
src/drift_detectors/univariate/hddm_a/: detector.py
src/drift_detectors/univariate/ks/: detector.py
src/drift_detectors/univariate/page_hinkley/: detector.py  metadata.yaml  usage.md
src/drift_detectors/univariate/psi/: detector.py  metadata.yaml  usage.md
src/drift_detectors/utility/: drift_detection_output.py
tests/: test_KDQ_tree.py  test_adwin.py  test_eddm.py  test_hddm_a.py  test_ks.py  test_mmd.py  test_model_disagreement.py  test_model_disagreement_metric.py  test_page_hinkley.py  test_pca_cd.py  test_psi.py
tools/: cleanup.py  cleanup.sh
use_cases/: psi_Indpensim.py
use_cases/IndPenSim/: README.md
use_cases/IndPenSim/data/: download_indpensim.py
use_cases/IndPenSim/data/reference/: README.md
use_cases/IndPenSim/data/test/: README.md  batch_100.csv  batch_91.csv  batch_93.csv  batch_94.csv  batch_97.csv
use_cases/IndPenSim/experiments/: README.md  README_DEPRECATED.txt  run_experiment_1.py  run_experiment_2.py
use_cases/IndPenSim/figures/: README.md  make_class_diagram.py  make_fault_timelines.py
use_cases/IndPenSim/results/: README.md  expA_multivar_per_phase.json  expA_per_phase.json  expB_per_phase.json
use_cases/indepensim_data/: README.md
use_cases/indepensim_data/reference_data/: batch_92.0.csv
use_cases/indepensim_data/test_data/: batch_95.0.csv  batch_96.0.csv  batch_98.0.csv  batch_99.0.csv
